# ladis_list

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  bam.yaml  build.yaml  config.yaml
.github/workflows/: ci.yml  release.yml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
ha_shopping_list/: DOCS.md  README.md  run.sh
ha_todo_manager/: AGENTS.md  DOCS.md  Dockerfile  LICENSE  README.md  bam.yaml  config.yaml  pyproject.toml  run.sh
ha_todo_manager/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ha_todo_manager/frontend/src/: App.tsx  main.tsx
ha_todo_manager/frontend/src/api/: client.ts
ha_todo_manager/frontend/src/components/: AddTodoForm.tsx  BoardsPanel.tsx  CardDetailPanel.tsx  ColumnSection.tsx  Header.tsx  KanbanBoard.tsx  KanbanColumn.tsx  PersonsPanel.tsx  SortableTodoCard.tsx  TagManager.tsx  TodoCard.tsx  WebhookSecretPanel.tsx
ha_todo_manager/frontend/src/hooks/: useBoards.ts  useColumns.ts  usePersons.ts  useTags.ts  useTodos.ts
ha_todo_manager/frontend/src/pages/: BoardPage.tsx  RootRedirect.tsx  SettingsPage.tsx
ha_todo_manager/spec/: roadmap.md
ha_todo_manager/src/ha_todo_manager/: __init__.py  __main__.py  _version.py  app.py  cli.py  database.py  dependencies.py  ha_client.py  scheduler.py  settings.py
ha_todo_manager/src/ha_todo_manager/models/: app_secret.py  board.py  column.py  person.py  tag.py  todo.py  todo_tag.py
ha_todo_manager/src/ha_todo_manager/routers/: boards.py  columns.py  persons.py  recurrence.py  tags.py  todos.py  webhook.py
ha_todo_manager/src/ha_todo_manager/services/: boards.py  columns.py  persons.py  recurrence.py  tags.py  todos.py  webhook_secret.py
ha_todo_manager/tests/: conftest.py
ha_todo_manager/tests/component/: test_cli_e2e.py
ha_todo_manager/tests/integration/: test_boards_api.py  test_columns_api.py  test_health.py  test_persons_api.py  test_recurrence_api.py  test_root.py  test_tags_api.py  test_todos_api.py  test_webhook_api.py
ha_todo_manager/tests/unit/: test_cli.py  test_ha_client.py
spec/: roadmap.md
src/ha_shopping_list/: app.py  settings.py
(+13 files in other folders)
